--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "eslint-config-flat-next",
-  "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "inspect": "eslint --inspect-config"
+    "inspect": "eslint --inspect-config",
+    "build": "unbuild",
+    "prepack": "unbuild"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "fast-glob": "^3.3.3",
     "unbuild": "^3.2.0"
   },
   "peerDependencies": {
+    "eslint": "^9.19.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "@next/eslint-plugin-next": "^15.1.4",
-    "eslint": "^9.17.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
